kubernetes/elastic-helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-otel-demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: otel-demo.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-otel-demo-frontendproxy
                port:
                  number: 8080
